--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,20 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "Python: Current File",
-            "type": "python",
+            "name": "Debug SABRE",
+            "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "program": "${workspaceFolder}/src/sabre.py",  // Updated path to include src folder
+            "args": [
+                "-g",
+                "-a", "bola",
+                // "--seek", "30", "120",
+                "--movie", "movie.json"
+            ],
+            "cwd": "${workspaceFolder}/src",  // Set working directory
             "console": "integratedTerminal",
-            "args": ["-v"]
+            "justMyCode": true
         }
     ]
 }
